<resources>
    <string name="app_name">Dcpoint</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login_value">Login</string>
    <string name="link_to_register">Don\'t have an account? Tap here register</string>
    <string name="hint_name">Name</string>
    <string name="btn_register_value">Register</string>
    <string name="link_to_login">Already have an account? Tap here login</string>
    <string name="text_break_time_end">Break end time</string>
    <string name="text_break_time_start">Break start time</string>
    <string name="text_time_start">Start time</string>
    <string name="text_time_end">End time</string>
    <string name="btn_update_time">Update time</string>
    <string name="report_title_text">Report</string>
    <string name="hint_carno">Car</string>
    <string name="hint_tour">Tour</string>
    <string name="hint_scanner">Scanner</string>
    <string name="btn_update_record">Finish</string>
    <string name="toast1">All fields are mandatory, please fill in all</string>
    <string name="toast2">Please enter valid email address</string>
    <string name="toast3">Please enter a password of at least 8 characters</string>
    <string name="alert1">"You have not entered break start and end time. Based upon your working time, system will deduct "</string>
    <string name="alert2">" minutes as break time. Do you want to proceed?"</string>
    <string name="toast4">Please enter Car number</string>
    <string name="toast5">Please enter tour number</string>
    <string name="toast6">Please enter scanner number</string>
    <string name="toast7">Please enter Break Start time</string>
    <string name="toast8">Please enter Break End time</string>
    <string name="toast9">Please enter End time</string>
    <string name="alertTitle">Break time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome">Welcome back to Dcpoint</string>
    <string name="showpassword">Show password</string>
    <string name="hint_StartKM">Start KMs</string>
    <string name="totalKM">Total KMs</string>
    <string name="hint_endKM">End KMs</string>
    <string name="toast10">Please enter start KMs</string>
    <string name="toast11">Please enter end KMs</string>
    <string name="toast12">End KM should be greater than start KM</string>
    <string name="msg_update">Today\'s record updated successfully</string>
    <string name="toast13">End time should be greater than start time</string>
    <string name="toast14">Please enter valid time</string>
</resources>
